--- a/src/containers/Constainer.module.scss
+++ b/src/containers/Constainer.module.scss
@@ -3,7 +3,7 @@
   justify-content: space-between;
   max-width: 1200px;
   width: 100%;
-  min-height: 700px;
+  min-height: 600px;
   background-image: url('/design/images/58328.jpg');
   background-repeat: no-repeat;
   background-position: center;
@@ -11,6 +11,7 @@
   margin: 0 20px;
   @media (max-width: 768px) {
     flex-direction: column;
+    min-height: 90vh;
   }
 }
 .panel {
